finished component dialog view

--- a/libs/nx-northwind-app/featured/order-master-detail/src/lib/order-master-detail-loader/order-master-detail-loader.component.html
+++ b/libs/nx-northwind-app/featured/order-master-detail/src/lib/order-master-detail-loader/order-master-detail-loader.component.html
@@ -320,6 +320,8 @@
       [disabled]="true">
     </nx-northwind-mt-input-text>
   </div>
+
+  <button type="button" (click)="openDlg()">open</button>
 </nx-northwind-base-master-detail-loader>
 
 <!-- SubTotal: {{ orderSubTotal }} Total: {{ orderTotal }}
