--- a/libs/nx-northwind-app/featured/shipper/src/lib/shipper-browser/shipper-browser.component.html
+++ b/libs/nx-northwind-app/featured/shipper/src/lib/shipper-browser/shipper-browser.component.html
@@ -3,5 +3,6 @@
   [model$]="shippers$"
   [error]="error$"
   [fnButtons]="fnButtons$"
-  [isLoaded]="loaded">
+  [isLoaded]="loaded"
+  [isDialogActive]="data.isDialog">
 </nx-northwind-base-browser>
