finished order master detail lookups

--- a/libs/nx-northwind-app/featured/customer/src/lib/customer-browser/customer-browser.component.html
+++ b/libs/nx-northwind-app/featured/customer/src/lib/customer-browser/customer-browser.component.html
@@ -3,5 +3,6 @@
   [model$]="customers$"
   [error]="error$"
   [fnButtons]="fnButtons$"
-  [isLoaded]="loaded">
+  [isLoaded]="loaded"
+  [isDialogActive]="data.isDialog">
 </nx-northwind-base-browser>
