--- a/libs/nx-northwind-app/featured/employee/src/lib/employee-browser/employee-browser.component.html
+++ b/libs/nx-northwind-app/featured/employee/src/lib/employee-browser/employee-browser.component.html
@@ -3,5 +3,6 @@
   [model$]="employees$"
   [error]="error$"
   [fnButtons]="fnButtons$"
-  [isLoaded]="loaded">
+  [isLoaded]="loaded"
+  [isDialogActive]="data.isDialog">
 </nx-northwind-base-browser>
