--- a/libs/nx-northwind-app/featured/order-master-detail/src/lib/order-master-detail-loader/order-master-detail-loader.component.html
+++ b/libs/nx-northwind-app/featured/order-master-detail/src/lib/order-master-detail-loader/order-master-detail-loader.component.html
@@ -25,7 +25,7 @@
           [required]="true">
         </nx-northwind-mt-input-text>
 
-        <nx-northwind-mt-select
+        <!-- <nx-northwind-mt-select
           class="mat-form-field"
           [id]="'CustomerID'"
           formControlName="CustomerID"
@@ -33,9 +33,21 @@
           [label]="'Customer'"
           [selectItems]="customersComboData"
           [disabled]="false"
-          [required]="true"></nx-northwind-mt-select>
+          [required]="true"></nx-northwind-mt-select> -->
 
-        <nx-northwind-mt-select
+        <nx-northwind-mt-lookup
+          class="mat-form-field"
+          id="Customer"
+          formControlName="Customer"
+          [(ngModel)]="orderModel.LU_Customer"
+          [label]="'Customer'"
+          [placeHolder]="'Enter Customer'"
+          [disabled]="false"
+          [required]="true"
+          [command]="customersLookup">
+        </nx-northwind-mt-lookup>
+
+        <!-- <nx-northwind-mt-select
           class="mat-form-field"
           id="EmployeeID"
           formControlName="EmployeeID"
@@ -43,7 +55,20 @@
           [label]="'Employee'"
           [selectItems]="employeesComboData"
           [disabled]="false"
-          [required]="true"></nx-northwind-mt-select>
+          [required]="true">
+        </nx-northwind-mt-select> -->
+
+        <nx-northwind-mt-lookup
+          class="mat-form-field"
+          id="Employee"
+          formControlName="Employee"
+          [(ngModel)]="orderModel.LU_Employee"
+          [label]="'Employee'"
+          [placeHolder]="'Enter Employee'"
+          [disabled]="false"
+          [required]="true"
+          [command]="employeesLookup">
+        </nx-northwind-mt-lookup>
 
         <nx-northwind-mt-input-date
           class="mat-form-field"
@@ -82,15 +107,17 @@
           [required]="true">
         </nx-northwind-mt-input-date>
 
-        <nx-northwind-mt-select
+        <nx-northwind-mt-lookup
           class="mat-form-field"
-          id="ShipVia"
-          formControlName="ShipVia"
-          [(ngModel)]="orderModel.ShipVia"
-          [label]="'ShipVia'"
-          [selectItems]="shippersComboData"
+          id="Shipper"
+          formControlName="Shipper"
+          [(ngModel)]="orderModel.LU_Shipper"
+          [label]="'Shipper'"
+          [placeHolder]="'Enter Shipper'"
           [disabled]="false"
-          [required]="true"></nx-northwind-mt-select>
+          [required]="true"
+          [command]="shippersLookup">
+        </nx-northwind-mt-lookup>
 
         <nx-northwind-mt-input-text
           class="mat-form-field"
@@ -221,7 +248,8 @@
             id="Id_{{ i }}"
             formControlName="Id"
             [(ngModel)]="orderDetailModel[i].Id" />
-          <nx-northwind-mt-select
+
+          <!-- <nx-northwind-mt-select
             class="mat-form-field order-details-product"
             [id]="'ProductID_' + i"
             formControlName="ProductID"
@@ -229,7 +257,21 @@
             [label]="'Product'"
             [selectItems]="productsComboData"
             [disabled]="false"
-            [required]="true"></nx-northwind-mt-select>
+            [required]="true">
+          </nx-northwind-mt-select> -->
+
+          <nx-northwind-mt-lookup
+            class="mat-form-field order-details"
+            [id]="'Product_' + i"
+            formControlName="Product"
+            [(ngModel)]="orderDetailModel[i].LU_Product"
+            [label]="'Product'"
+            [placeHolder]="'Enter Product'"
+            [disabled]="false"
+            [required]="true"
+            [command]="productsLookup"
+            [commandArgs]="'Product_' + i">
+          </nx-northwind-mt-lookup>
 
           <nx-northwind-mt-input-text
             class="mat-form-field order-details"
@@ -321,9 +363,10 @@
     </nx-northwind-mt-input-text>
   </div>
 
-  <button type="button" (click)="openDlg()">open</button>
-</nx-northwind-base-master-detail-loader>
+  <!-- <button type="button" (click)="openDlg(null)">open</button>
+</nx-northwind-base-master-detail-loader> -->
 
-<!-- SubTotal: {{ orderSubTotal }} Total: {{ orderTotal }}
+  <!-- SubTotal: {{ orderSubTotal }} Total: {{ orderTotal }}
 <pre>Status: {{ formGroup.status | json }}</pre>
 <pre>Valid: {{ formGroup.valid | json }}</pre> -->
+</nx-northwind-base-master-detail-loader>
