--- a/libs/nx-northwind-app/featured/territory/src/lib/territory-browser/territory-browser.component.html
+++ b/libs/nx-northwind-app/featured/territory/src/lib/territory-browser/territory-browser.component.html
@@ -4,5 +4,6 @@
   [error]="error$"
   [fnButtons]="fnButtons$"
   [isLoaded]="loaded"
+  [isDialogActive]="data.isDialog"
 >
 </nx-northwind-base-browser>
