--- a/libs/nx-northwind-app/featured/category/src/lib/category-browser/category-browser.component.html
+++ b/libs/nx-northwind-app/featured/category/src/lib/category-browser/category-browser.component.html
@@ -3,5 +3,6 @@
   [model$]="categories$"
   [error]="error$"
   [fnButtons]="fnButtons$"
-  [isLoaded]="loaded">
+  [isLoaded]="loaded"
+  [isDialogActive]="data.isDialog">
 </nx-northwind-base-browser>
