--- a/libs/nx-northwind-app/featured/supplier/src/lib/supplier-browser/supplier-browser.component.html
+++ b/libs/nx-northwind-app/featured/supplier/src/lib/supplier-browser/supplier-browser.component.html
@@ -4,5 +4,5 @@
   [error]="error$"
   [fnButtons]="fnButtons$"
   [isLoaded]="loaded"
->
+  [isDialogActive]="data.isDialog">
 </nx-northwind-base-browser>
