--- a/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.html
+++ b/libs/nx-northwind-app/featured/shared/src/lib/base-browser/base-browser.component.html
@@ -10,7 +10,9 @@
     <br />
   </ng-container>
 
-  <nx-northwind-mt-toolbar-btnfunctions [title]="title">
+  <nx-northwind-mt-toolbar-btnfunctions
+    class="toolbar"
+    [title]="title">
     <div class="function-buttons">
       <nx-northwind-mt-button-icon
         class="btns"
